--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   firebase_core: 2.17.0
   firebase_auth: 4.10.1
+  percent_indicator: ^4.0.1
+  syncfusion_flutter_gauges: ^23.1.40
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
